--- a/app/src/main/res/layout/activity_certification.xml
+++ b/app/src/main/res/layout/activity_certification.xml
@@ -8,25 +8,8 @@
     android:backgroundTint="#EDE7E7"
     tools:context=".Certification">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:alignmentMode="alignMargins"
-                android:columnCount="2"
-                android:columnOrderPreserved="false">
-
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/starboy_concert"
+                    android:id="@+id/certification"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_columnSpan="2"
@@ -44,7 +27,7 @@
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/certificate"
+                            android:src="@drawable/certified"
                             android:scaleType="centerCrop" />
 
                         <TextView
@@ -66,7 +49,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="June 15 2024, 5:00 PM"
+                            android:text="TBA"
                             android:textColor="#B0B0B0"
                             android:textSize="14sp" />
 
@@ -82,17 +65,11 @@
                             android:textSize="14sp" />
 
                         <Button
-                            android:layout_width="145dp"
+                            android:id="@+id/button_schedule_notification"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="16dp"
-                            android:backgroundTint="#FF6200EE"
-                            android:text="Notify Me"
-                            android:textColor="#FFFFFFFF" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-            </GridLayout>
-        </LinearLayout>
-    </ScrollView>
+                            android:layout_centerInParent="true"
+                            android:text="Schedule Notification" />
+                </LinearLayout>
+        </androidx.cardview.widget.CardView>
 </FrameLayout>
