--- a/app/src/main/res/layout/activity_future_events.xml
+++ b/app/src/main/res/layout/activity_future_events.xml
@@ -11,6 +11,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/background"
         android:orientation="vertical">
 
         <LinearLayout
@@ -24,6 +25,22 @@
                 android:alignmentMode="alignMargins"
                 android:columnCount="2"
                 android:columnOrderPreserved="false">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="List of Upcoming Events"
+                        android:layout_margin="30dp"
+                        android:textAlignment="center"
+                        android:textSize="30sp"
+                        android:textColor="@color/white">
+
+                    </TextView>
+                </LinearLayout>
 
 
                 <androidx.cardview.widget.CardView
@@ -40,13 +57,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="140dp"
                         android:orientation="horizontal"
-                        android:background="#FF0000"> <!-- Red for debugging -->
+                        android:background="@drawable/background">
 
                         <ImageView
                             android:layout_width="193dp"
                             android:layout_height="130dp"
                             android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
+                            android:src="@drawable/certified" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -79,14 +96,14 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="140dp"
-                        android:background="#00FF00"
-                        android:orientation="horizontal"> <!-- Green for debugging -->
+                        android:background="@drawable/background"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="200dp"
                             android:layout_height="130dp"
                             android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
+                            android:src="@drawable/expo" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -120,13 +137,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="140dp"
                         android:orientation="horizontal"
-                        android:background="#0000FF"> <!-- Blue for debugging -->
+                        android:background="@drawable/background">
 
                         <ImageView
                             android:layout_width="200dp"
                             android:layout_height="130dp"
                             android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
+                            android:src="@drawable/dblogo" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -160,13 +177,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="140dp"
                         android:orientation="horizontal"
-                        android:background="#FFFF00"> <!-- Yellow for debugging -->
+                        android:background="@drawable/background">
 
                         <ImageView
                             android:layout_width="200dp"
                             android:layout_height="130dp"
                             android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
+                            android:src="@drawable/recog" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -200,13 +217,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="140dp"
                         android:orientation="horizontal"
-                        android:background="#FF00FF"> <!-- Magenta for debugging -->
+                        android:background="@drawable/background">
 
                         <ImageView
                             android:layout_width="200dp"
                             android:layout_height="130dp"
                             android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
+                            android:src="@drawable/htmlcss" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -240,13 +257,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="140dp"
                         android:orientation="horizontal"
-                        android:background="#00FFFF"> <!-- Cyan for debugging -->
+                        android:background="@drawable/background">
 
                         <ImageView
                             android:layout_width="200dp"
                             android:layout_height="130dp"
                             android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
+                            android:src="@drawable/cb" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -280,13 +297,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="140dp"
                         android:orientation="horizontal"
-                        android:background="#FFA500"> <!-- Orange for debugging -->
+                        android:background="@drawable/background">
 
                         <ImageView
                             android:layout_width="200dp"
                             android:layout_height="130dp"
                             android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
+                            android:src="@drawable/pf" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
