--- a/app/src/main/res/layout/activity_ongoing_events.xml
+++ b/app/src/main/res/layout/activity_ongoing_events.xml
@@ -25,7 +25,23 @@
                 android:columnCount="2"
                 android:columnOrderPreserved="false">
 
-                <!-- Ongoing Card -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Raging Events 🔥"
+                        android:layout_margin="30dp"
+                        android:textAlignment="center"
+                        android:textSize="30sp"
+                        android:textColor="@color/black">
+
+                    </TextView>
+                </LinearLayout>
+
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/certification"
                     android:layout_width="wrap_content"
@@ -39,14 +55,13 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="140dp"
-                        android:orientation="horizontal"
-                        android:background="#FF0000"> <!-- Red for debugging -->
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="193dp"
                             android:layout_height="130dp"
                             android:layout_gravity="bottom"
-                            android:src="@drawable/img" />
+                            android:src="@drawable/certified" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -66,7 +81,6 @@
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
-
 
 
             </GridLayout>
