--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,37 +8,10 @@
     android:backgroundTint="#EDE7E7"
     tools:context=".FragmentHome">
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="44dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="133dp"
-        android:src="@drawable/loudspeaker" />
-
-    <TextView
-        android:id="@+id/marquee_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="137dp"
-        android:padding="7dp"
-        android:singleLine="true"
-        android:textSize="20sp"
-        android:ellipsize="marquee"
-        android:scrollHorizontally="true"
-        android:background="@color/black"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:text="Welcome to IntelTrack where you will always be updated on DTP events"
-        android:textColor="#7FF607" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/background"
             android:orientation="vertical">
 
             <LinearLayout
@@ -53,6 +26,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="30dp"
+                    android:gravity="left"
                     android:orientation="vertical">
 
                     <TextView
@@ -60,180 +34,157 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="IntelTrack"
-                        android:textColor="#000000"
+                        android:textColor="@color/white"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView10"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Never Miss Events!"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
+                        android:layout_width="138dp"
+                        android:layout_height="70dp"
+                        android:text="Events Managed, Memories Made"
+                        android:textColor="#B0B0B0"
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="100dp"
-                    android:layout_height="150dp"
-                    android:layout_gravity="right"
-                    android:layout_margin="1dp"
-                    android:layout_marginLeft="20dp"
-                    android:src="@drawable/img" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/grid"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="30dp">
-
-                <GridLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:alignmentMode="alignMargins"
+                    android:layout_width="200dp"
+                    android:layout_height="151dp"
+                    android:layout_marginTop="15dp"
                     android:layout_marginRight="20dp"
-                    android:columnCount="2"
-                    android:columnOrderPreserved="false">
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/ongoing"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_columnSpan="2"
-                        android:layout_columnWeight="1"
-                        android:layout_margin="12dp"
-                        app:cardBackgroundColor="@color/black"
-                        app:cardCornerRadius="4dp"
-                        app:cardElevation="16dp">
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="140dp"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:layout_width="193dp"
-                                android:layout_height="130dp"
-                                android:layout_gravity="bottom"
-                                android:src="@drawable/img" />
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="10dp"
-                                    android:gravity="center"
-                                    android:text="Ongoing Events"
-                                    android:textColor="@color/white"
-                                    android:textSize="30sp">
-
-                                </TextView>
-                            </LinearLayout>
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/future"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_columnSpan="2"
-                        android:layout_columnWeight="1"
-                        android:layout_margin="12dp"
-                        app:cardCornerRadius="4dp"
-                        app:cardBackgroundColor="@color/black"
-                        app:cardElevation="16dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="140dp"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:layout_width="200dp"
-                                android:layout_height="130dp"
-                                android:layout_gravity="bottom"
-                                android:src="@drawable/img" />
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="10dp"
-                                    android:gravity="center"
-                                    android:text="Future Events"
-                                    android:textColor="@color/white"
-                                    android:textSize="30sp">
-
-                                </TextView>
-                            </LinearLayout>
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/past"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_columnSpan="2"
-                        android:layout_columnWeight="1"
-                        android:layout_margin="12dp"
-                        app:cardBackgroundColor="@color/black"
-                        app:cardCornerRadius="4dp"
-                        app:cardElevation="16dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="140dp"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:layout_width="200dp"
-                                android:layout_height="130dp"
-                                android:layout_gravity="bottom"
-                                android:src="@drawable/img" />
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="10dp"
-                                    android:gravity="center"
-                                    android:text="Past Events"
-                                    android:textColor="@color/white"
-                                    android:textSize="30sp">
-
-
-                                </TextView>
-                            </LinearLayout>
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-                </GridLayout>
+                    android:src="@drawable/way" />
             </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Check Out Events below!"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="70dp"
+                    android:layout_marginTop="25dp"
+                    android:textSize="24sp"/>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/future"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_columnSpan="2"
+                    android:layout_margin="12dp"
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="16dp">
+
+                    <LinearLayout
+                        android:layout_width="414dp"
+                        android:layout_height="140dp"
+                        android:background="@drawable/background"
+                        android:gravity="left"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="171dp"
+                            android:layout_height="151dp"
+                            android:src="@drawable/future" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="289dp"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="20dp"
+                                android:layout_marginTop="10dp"
+                                android:text="Upcoming Events"
+                                android:textColor="@color/white"
+                                android:textSize="24sp" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/ongoing"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_columnSpan="2"
+                    android:layout_margin="12dp"
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="16dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="140dp"
+                        android:background="@drawable/background"
+                        android:gravity="left"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="171dp"
+                            android:layout_height="144dp"
+                            android:layout_gravity="bottom"
+                            android:src="@drawable/present" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:gravity="left"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="361dp"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="15dp"
+                                android:layout_marginTop="10dp"
+                                android:text="Ongoing Events"
+                                android:textColor="@color/white"
+                                android:textSize="24sp" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/past"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_columnSpan="2"
+                    android:layout_margin="12dp"
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="16dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="140dp"
+                        android:background="@drawable/background"
+                        android:gravity="left"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="171dp"
+                            android:layout_height="158dp"
+                            android:src="@drawable/pasti" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="15dp"
+                                android:layout_marginTop="10dp"
+                                android:gravity="left"
+                                android:text="Past Events"
+                                android:textColor="@color/white"
+                                android:textSize="24sp" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
         </LinearLayout>
-    </ScrollView>
 </FrameLayout>
