Another problem fucking arise

--- a/app/src/main/res/layout/activity_frag_certi.xml
+++ b/app/src/main/res/layout/activity_frag_certi.xml
@@ -2,15 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#504949"
+    android:id="@+id/main"
     android:backgroundTint="#EDE7E7"
-    tools:context=".Certification">
+    tools:context=".FragCerti">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/certification"
+        android:id="@+id/certi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_columnSpan="2"
@@ -28,8 +27,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/certified" />
+                android:src="@drawable/certified"
+                android:scaleType="centerCrop" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -54,7 +53,6 @@
                 android:textColor="#B0B0B0"
                 android:textSize="14sp" />
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -65,13 +63,11 @@
                 android:textSize="14sp" />
 
             <Button
-                android:id="@+id/button_schedule_notification"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center"
-                android:backgroundTint="#FF504949"
-                android:text="Currently Happening" />
+                android:text="Event is Currently Happening" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
